[功能] 矩阵属性数据查询-下拉接口优化
关联 #[1645760953974787]矩阵属性数据查询-下拉接口优化 http://192.168.0.96:8090/demo/rdm.html#/story-detail/939050947543040/939050947543042/1645760953974787