@@ -32,6 +32,7 @@ import neatlogic.framework.matrix.exception.MatrixNotFoundException;
 import neatlogic.framework.restful.annotation.*;
 import neatlogic.framework.restful.constvalue.OperationTypeEnum;
 import neatlogic.framework.restful.core.privateapi.PrivateApiComponentBase;
+import neatlogic.module.tenant.service.MatrixService;
 import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.collections4.MapUtils;
 import org.apache.commons.lang3.StringUtils;
@@ -48,6 +49,9 @@ public class MatrixColumnDataSearchForSelectApi extends PrivateApiComponentBase 
 
     @Resource
     private MatrixMapper matrixMapper;
+
+    @Resource
+    private MatrixService matrixService;
 
     @Override
     public String getToken() {
@@ -67,6 +71,51 @@ public class MatrixColumnDataSearchForSelectApi extends PrivateApiComponentBase 
     @Override
     public boolean disableReturnCircularReferenceDetect() {
         return true;
+    }
+
+    /**
+     * 获取参数范例
+     *
+     * @return 参数范例json
+     */
+    @Override
+    public JSONObject example() {
+        return new JSONObject()
+                .fluentPut("matrixUuid", "8d8daee892404f08b6aeb3fac52031c8")
+                .fluentPut("keyword", "系统")
+                .fluentPut("keywordColumn", "67f6055224d233cba5c2833035d66101")
+                .fluentPut("valueField", "b7fa5b8306513b74acd8a6a3bf4b502e")
+                .fluentPut("textField", "67f6055224d233cba5c2833035d66101")
+                .fluentPut("hiddenFieldList", new JSONArray()
+                        .fluentAdd("ed0f56f7ae7b38c88ac85624b32ecdc0")
+                        .fluentAdd("4051f6a4cd993a1ea1952219050abda0")
+                )
+                .fluentPut("currentPage", 1)
+                .fluentPut("pageSize", 20)
+                .fluentPut("needPage", true)
+                .fluentPut("defaultValue", new JSONArray().fluentAdd(new JSONObject()
+                        .fluentPut("value", "481894860644358")
+                        .fluentPut("text", "个贷系统")
+//                        .fluentPut("ed0f56f7ae7b38c88ac85624b32ecdc0", "ALS")
+//                        .fluentPut("4051f6a4cd993a1ea1952219050abda0", "管理员,杨-志")
+                ))
+                .fluentPut("filterList", new JSONArray().fluentAdd(
+                        new JSONObject()
+                                .fluentPut("uuid", "4051f6a4cd993a1ea1952219050abda0")
+                                .fluentPut("uniqueIdentifier", "owner")
+                                .fluentPut("expression", "equal")
+                                .fluentPut("description", "uuid与uniqueIdentifier字段二选一，expression选项有like|notlike|equal|unequal|include|exclude|between|greater-than|less-than|is-null|match|is-not-null")
+                                .fluentPut("valueList", new JSONArray().fluentAdd("admin"))
+                ))
+                .fluentPut("matrixLabel", "cmdbAppOwner")
+                .fluentPut("keywordColumnUniqueIdentifier", "name")
+                .fluentPut("valueFieldUniqueIdentifier", "_id")
+                .fluentPut("textFieldUniqueIdentifier", "name")
+                .fluentPut("hiddenFieldUniqueIdentifierList", new JSONArray()
+                        .fluentAdd("abbrName")
+                        .fluentAdd("owner")
+                )
+                ;
     }
 
     @CacheControl(cacheControlType = CacheControlType.MAXAGE, maxAge = 30000)
@@ -94,68 +143,68 @@ public class MatrixColumnDataSearchForSelectApi extends PrivateApiComponentBase 
             @Param(explode = BasePageVo.class)
     })
     @Description(desc = "矩阵属性数据查询-下拉级联接口")
-    @Example(example = "" +
-            "{" +
-            "\"matrixUuid(矩阵uuid，必填)\": \"825e6ba09050406eb0de8c4bdcd4e27c\"," +
-            "\"columnList(需要返回数据的字段列表，必填)\": [" +
-            "\"92196814d8da4ad9bed63e1d650d7e98\"," +
-            "\"a4e9978fd06d46d78b13f947a2b1b188\"," +
-            "\"cf2c2677c18540a79e60cfd9d531b50c\"," +
-            "\"b5d685e9e5fb4ce0baa0604de812e93b\"," +
-            "\"6e4abb9b532b49139cec798a3828c7cd\"," +
-            "\"3d2f5475138744938f0bb1da1f82002c\"," +
-            "\"96d449a58b664a31b32bb1c28090aeee\"" +
-            "]," +
-            "\"searchColumnList(可搜索字段列表，选填)\": [" +
-            "\"92196814d8da4ad9bed63e1d650d7e98\"," +
-            "\"a4e9978fd06d46d78b13f947a2b1b188\"" +
-            "\t]," +
-            "\"currentPage\": 1," +
-            "\"pageSize\": 10," +
-            "\"sourceColumnList(过滤条件列表，选填)\": [" +
-            "{" +
-            "\"column(字段uuid，必填)\": \"a4e9978fd06d46d78b13f947a2b1b188\"," +
-            "\"expression(过滤表达式，必填)\": \"like|notlike|equal|unequal|include|exclude|between|greater-than|less-than|is-null|match|is-not-null\"," +
-            "\"valueList(过滤值列表，必填)\": [" +
-            "\"1\"" +
-            "]" +
-            "}" +
-            "]," +
-            "\"filterList(联动过滤条件列表，选填)\": [" +
-            "{" +
-            "\"uuid(字段uuid，必填)\": \"92196814d8da4ad9bed63e1d650d7e98\"," +
-            "\"valueList(过滤值列表，必填)\": [" +
-            "\"2\"" +
-            "]" +
-            "}" +
-            "]" +
-            "}")
+//    @Example(example = "" +
+//            "{" +
+//            "\"matrixUuid(矩阵uuid，必填)\": \"825e6ba09050406eb0de8c4bdcd4e27c\"," +
+//            "\"columnList(需要返回数据的字段列表，必填)\": [" +
+//            "\"92196814d8da4ad9bed63e1d650d7e98\"," +
+//            "\"a4e9978fd06d46d78b13f947a2b1b188\"," +
+//            "\"cf2c2677c18540a79e60cfd9d531b50c\"," +
+//            "\"b5d685e9e5fb4ce0baa0604de812e93b\"," +
+//            "\"6e4abb9b532b49139cec798a3828c7cd\"," +
+//            "\"3d2f5475138744938f0bb1da1f82002c\"," +
+//            "\"96d449a58b664a31b32bb1c28090aeee\"" +
+//            "]," +
+//            "\"searchColumnList(可搜索字段列表，选填)\": [" +
+//            "\"92196814d8da4ad9bed63e1d650d7e98\"," +
+//            "\"a4e9978fd06d46d78b13f947a2b1b188\"" +
+//            "\t]," +
+//            "\"currentPage\": 1," +
+//            "\"pageSize\": 10," +
+//            "\"sourceColumnList(过滤条件列表，选填)\": [" +
+//            "{" +
+//            "\"column(字段uuid，必填)\": \"a4e9978fd06d46d78b13f947a2b1b188\"," +
+//            "\"expression(过滤表达式，必填)\": \"like|notlike|equal|unequal|include|exclude|between|greater-than|less-than|is-null|match|is-not-null\"," +
+//            "\"valueList(过滤值列表，必填)\": [" +
+//            "\"1\"" +
+//            "]" +
+//            "}" +
+//            "]," +
+//            "\"filterList(联动过滤条件列表，选填)\": [" +
+//            "{" +
+//            "\"uuid(字段uuid，必填)\": \"92196814d8da4ad9bed63e1d650d7e98\"," +
+//            "\"valueList(过滤值列表，必填)\": [" +
+//            "\"2\"" +
+//            "]" +
+//            "}" +
+//            "]" +
+//            "}")
     @Override
     public Object myDoService(JSONObject jsonObj) throws Exception {
-        Boolean needPage = jsonObj.getBoolean("needPage");
-        jsonObj.remove("needPage");
-        MatrixDataVo dataVo = jsonObj.toJavaObject(MatrixDataVo.class);
-        if (StringUtils.isBlank(dataVo.getMatrixUuid()) && StringUtils.isBlank(dataVo.getMatrixLabel())) {
+        String keyword = jsonObj.getString("keyword");
+        String matrixUuid = jsonObj.getString("matrixUuid");
+        String matrixLabel = jsonObj.getString("matrixLabel");
+        if (StringUtils.isBlank(matrixUuid) && StringUtils.isBlank(matrixLabel)) {
             throw new ParamNotExistsException("matrixUuid", "matrixLabel");
         }
         MatrixVo matrixVo = null;
-        if (StringUtils.isNotBlank(dataVo.getMatrixUuid())) {
-            matrixVo = MatrixPrivateDataSourceHandlerFactory.getMatrixVo(dataVo.getMatrixUuid());
+        if (StringUtils.isNotBlank(matrixUuid)) {
+            matrixVo = MatrixPrivateDataSourceHandlerFactory.getMatrixVo(matrixUuid);
             if (matrixVo == null) {
-                matrixVo = matrixMapper.getMatrixByUuid(dataVo.getMatrixUuid());
+                matrixVo = matrixMapper.getMatrixByUuid(matrixUuid);
                 if (matrixVo == null) {
-                    throw new MatrixNotFoundException(dataVo.getMatrixUuid());
+                    throw new MatrixNotFoundException(matrixUuid);
                 }
             }
-        } else if (StringUtils.isNotBlank(dataVo.getMatrixLabel())) {
-            matrixVo = MatrixPrivateDataSourceHandlerFactory.getMatrixVoByLabel(dataVo.getMatrixLabel());
+        } else if (StringUtils.isNotBlank(matrixLabel)) {
+            matrixVo = MatrixPrivateDataSourceHandlerFactory.getMatrixVoByLabel(matrixLabel);
             if (matrixVo == null) {
-                matrixVo = matrixMapper.getMatrixByLabel(dataVo.getMatrixLabel());
+                matrixVo = matrixMapper.getMatrixByLabel(matrixLabel);
                 if (matrixVo == null) {
-                    throw new MatrixNotFoundException(dataVo.getMatrixLabel());
+                    throw new MatrixNotFoundException(matrixLabel);
                 }
             }
-            dataVo.setMatrixUuid(matrixVo.getUuid());
+            matrixUuid = matrixVo.getUuid();
         }
 
         IMatrixDataSourceHandler matrixDataSourceHandler = MatrixDataSourceHandlerFactory.getHandler(matrixVo.getType());
@@ -175,8 +224,10 @@ public class MatrixColumnDataSearchForSelectApi extends PrivateApiComponentBase 
             }
             uniqueIdentifierToUuidMap.put(uniqueIdentifier, matrixAttributeVo.getUuid());
         }
-        List<MatrixFilterVo> filterList = dataVo.getFilterList();
-        if (CollectionUtils.isNotEmpty(filterList)) {
+        List<MatrixFilterVo> filterList = new ArrayList<>();
+        JSONArray filterArray = jsonObj.getJSONArray("filterList");
+        if (CollectionUtils.isNotEmpty(filterArray)) {
+            filterList = filterArray.toJavaList(MatrixFilterVo.class);
             Iterator<MatrixFilterVo> iterator = filterList.iterator();
             while (iterator.hasNext()) {
                 MatrixFilterVo matrixFilterVo = iterator.next();
@@ -200,8 +251,8 @@ public class MatrixColumnDataSearchForSelectApi extends PrivateApiComponentBase 
                 }
             }
         }
-        Set<String> notNullColumnSet = new HashSet<>();
-        List<String> attributeList = matrixAttributeList.stream().map(MatrixAttributeVo::getUuid).collect(Collectors.toList());
+
+        List<String> attributeList = matrixAttributeList.stream().map(MatrixAttributeVo::getUuid).toList();
         String valueField = jsonObj.getString("valueField");
         String valueFieldUniqueIdentifier = jsonObj.getString("valueFieldUniqueIdentifier");
         if (StringUtils.isNotBlank(valueField)) {
@@ -218,7 +269,7 @@ public class MatrixColumnDataSearchForSelectApi extends PrivateApiComponentBase 
             }
             valueField = attrUuid;
         }
-        notNullColumnSet.add(valueField);
+
         String textField = jsonObj.getString("textField");
         String textFieldUniqueIdentifier = jsonObj.getString("textFieldUniqueIdentifier");
         if (StringUtils.isNotBlank(textField)) {
@@ -235,22 +286,18 @@ public class MatrixColumnDataSearchForSelectApi extends PrivateApiComponentBase 
             }
             textField = attrUuid;
         }
-        List<Map<String, JSONObject>> resultList = new ArrayList<>();
-        dataVo.setKeywordColumn(textField);
-        notNullColumnSet.add(textField);
-        List<String> columnList = new ArrayList<>();
-        columnList.add(valueField);
-        columnList.add(textField);
-        JSONArray hiddenFieldList = jsonObj.getJSONArray("hiddenFieldList");
+
+        List<String> hiddenFieldList = new ArrayList<>();
+        JSONArray hiddenFieldArray = jsonObj.getJSONArray("hiddenFieldList");
         JSONArray hiddenFieldUniqueIdentifierList = jsonObj.getJSONArray("hiddenFieldUniqueIdentifierList");
-        if (CollectionUtils.isNotEmpty(hiddenFieldList)) {
-            for (int i = 0; i < hiddenFieldList.size(); i++) {
-                String hiddenField = hiddenFieldList.getString(i);
+        if (CollectionUtils.isNotEmpty(hiddenFieldArray)) {
+            for (int i = 0; i < hiddenFieldArray.size(); i++) {
+                String hiddenField = hiddenFieldArray.getString(i);
                 if (StringUtils.isNotBlank(hiddenField)) {
                     if (!attributeList.contains(hiddenField)) {
                         throw new MatrixAttributeNotFoundException(matrixVo.getName(), hiddenField);
                     }
-                    columnList.add(hiddenField);
+                    hiddenFieldList.add(hiddenField);
                 }
             }
         } else if (CollectionUtils.isNotEmpty(hiddenFieldUniqueIdentifierList)) {
@@ -263,210 +310,33 @@ public class MatrixColumnDataSearchForSelectApi extends PrivateApiComponentBase 
                 if (StringUtils.isBlank(hiddenField)) {
                     throw new MatrixAttributeNotFoundException(matrixVo.getName(), hiddenFieldUniqueIdentifier);
                 }
-                columnList.add(hiddenField);
+                hiddenFieldList.add(hiddenField);
             }
         }
-        dataVo.setColumnList(columnList);
-        dataVo.setNotNullColumnList(new ArrayList<>(notNullColumnSet));
-
-        String keywordColumn = dataVo.getKeywordColumn();
-        String keywordColumnUniqueIdentifier = dataVo.getKeywordColumnUniqueIdentifier();
+        String keywordColumn = jsonObj.getString("keywordColumn");
+        String keywordColumnUniqueIdentifier = jsonObj.getString("keywordColumnUniqueIdentifier");
         if (StringUtils.isBlank(keywordColumn) && StringUtils.isNotBlank(keywordColumnUniqueIdentifier)) {
             String attrUuid = uniqueIdentifierToUuidMap.get(keywordColumnUniqueIdentifier);
             if (StringUtils.isBlank(attrUuid)) {
                 throw new MatrixAttributeNotFoundException(matrixVo.getName(), keywordColumnUniqueIdentifier);
             }
-            dataVo.setKeywordColumn(attrUuid);
+            keywordColumn = attrUuid;
         }
-        dataVo.setDistinct(true);
-        JSONArray defaultValue = dataVo.getDefaultValue();
-        if (CollectionUtils.isNotEmpty(defaultValue)) {
-            List<MatrixDefaultValueFilterVo> defaultValueFilterList = new ArrayList<>();
-            for (Object defaultValueObject : defaultValue) {
-                if (defaultValueObject instanceof JSONObject) {
-                    JSONObject defaultValueObj = (JSONObject) defaultValueObject;
-                    String value = defaultValueObj.getString("value");
-                    String text = defaultValueObj.getString("text");
-                    MatrixDefaultValueFilterVo matrixDefaultValueFilterVo = new MatrixDefaultValueFilterVo(
-                            new MatrixKeywordFilterVo(valueField, SearchExpression.EQ.getExpression(), value),
-                            new MatrixKeywordFilterVo(textField, SearchExpression.EQ.getExpression(), text)
-                    );
-                    defaultValueFilterList.add(matrixDefaultValueFilterVo);
-                } else if (defaultValueObject instanceof String) {
-                    String defaultValueStr = (String) defaultValueObject;
-                    MatrixDefaultValueFilterVo matrixDefaultValueFilterVo = new MatrixDefaultValueFilterVo(
-                            new MatrixKeywordFilterVo(valueField, SearchExpression.EQ.getExpression(), defaultValueStr),
-                            null
-                    );
-                    defaultValueFilterList.add(matrixDefaultValueFilterVo);
-                } else {
-                    String defaultValueStr = defaultValueObject.toString();
-                    MatrixDefaultValueFilterVo matrixDefaultValueFilterVo = new MatrixDefaultValueFilterVo(
-                            new MatrixKeywordFilterVo(valueField, SearchExpression.EQ.getExpression(), defaultValueStr),
-                            null
-                    );
-                    defaultValueFilterList.add(matrixDefaultValueFilterVo);
-                }
-            }
-            dataVo.setDefaultValueFilterList(defaultValueFilterList);
-            dataVo.setDefaultValue(null);
-
-            resultList = matrixDataSourceHandler.searchTableDataNew(dataVo);
-            deduplicateData(null, valueField, textField, resultList);
-        } else {
-            List<Map<String, JSONObject>> previousPageList = new ArrayList<>();
-            int startNum = dataVo.getStartNum();
-            int currentPageBackup = dataVo.getCurrentPage();
-            int pageSize = dataVo.getPageSize();
-            if (Objects.equals(needPage, false)) {
-                dataVo.setNeedPage(needPage);
-                dataVo.getPageSize();
-                pageSize = Integer.MAX_VALUE;
-            }
-            int currentPage = 0;
-            while (resultList.size() < pageSize) {
-                currentPage++;
-                dataVo.setCurrentPage(currentPage);
-                List<Map<String, JSONObject>> list = matrixDataSourceHandler.searchTableDataNew(dataVo);
-                deduplicateData(previousPageList, valueField, textField, list);
-                for (Map<String, JSONObject> element : list) {
-                    previousPageList.add(element);
-                    if (previousPageList.size() > startNum) {
-                        resultList.add(element);
-                        if (resultList.size() >= pageSize) {
-                            break;
-                        }
-                    }
-                }
-                if (currentPage >= dataVo.getPageCount()) {
-                    break;
-                }
-            }
-            if (Objects.equals(needPage, false)) {
-                dataVo.setPageCount(1);
-            }
-            dataVo.setCurrentPage(currentPageBackup);
-        }
-        JSONArray dataList = new JSONArray();
-        if (CollectionUtils.isNotEmpty(resultList)) {
-            for (Map<String, JSONObject> result : resultList) {
-                JSONObject element = new JSONObject();
-                JSONObject valueObj = result.get(valueField);
-                if (MapUtils.isNotEmpty(valueObj)) {
-                    String valueStr = valueObj.getString("value");
-                    element.put("value", valueStr);
-                }
-                JSONObject textObj = result.get(textField);
-                if (MapUtils.isNotEmpty(textObj)) {
-                    String textStr = textObj.getString("text");
-                    element.put("text", textStr);
-                }
-                if (CollectionUtils.isNotEmpty(hiddenFieldList)) {
-                    for (int i = 0; i < hiddenFieldList.size(); i++) {
-                        String hiddenField = hiddenFieldList.getString(i);
-                        if (StringUtils.isBlank(hiddenField)) {
-                            continue;
-                        }
-//                        if (Objects.equals(hiddenField, valueField)) {
-//                            continue;
-//                        }
-                        JSONObject hiddenFieldObj = result.get(hiddenField);
-                        if (MapUtils.isNotEmpty(hiddenFieldObj)) {
-                            String hiddenFieldValue = hiddenFieldObj.getString("value");
-                            element.put(hiddenField, hiddenFieldValue);
-                        }
-                    }
-                } else if (CollectionUtils.isNotEmpty(hiddenFieldUniqueIdentifierList)) {
-                    for (int i = 0; i < hiddenFieldUniqueIdentifierList.size(); i++) {
-                        String hiddenFieldUniqueIdentifier = hiddenFieldUniqueIdentifierList.getString(i);
-                        if (StringUtils.isBlank(hiddenFieldUniqueIdentifier)) {
-                            continue;
-                        }
-                        String hiddenField = uniqueIdentifierToUuidMap.get(hiddenFieldUniqueIdentifier);
-                        if (StringUtils.isBlank(hiddenField)) {
-                            continue;
-                        }
-//                        if (Objects.equals(hiddenField, valueField)) {
-//                            continue;
-//                        }
-                        JSONObject hiddenFieldObj = result.get(hiddenField);
-                        if (MapUtils.isNotEmpty(hiddenFieldObj)) {
-                            String hiddenFieldValue = hiddenFieldObj.getString("value");
-                            element.put(hiddenFieldUniqueIdentifier, hiddenFieldValue);
-                        }
-                    }
-                }
-                dataList.add(element);
-            }
-        }
-        JSONObject returnObj = new JSONObject();
-        returnObj.put("dataList", dataList);
-        returnObj.put("currentPage", dataVo.getCurrentPage());
-        returnObj.put("pageSize", dataVo.getPageSize());
-        returnObj.put("pageCount", dataVo.getPageCount());
-        returnObj.put("rowNum", dataVo.getRowNum());
-        return returnObj;
-    }
-
-    private void deduplicateData(List<Map<String, JSONObject>> previousPageList, String valueField, String textField, List<Map<String, JSONObject>> resultList) {
-        List<String> duplicateValue = new ArrayList<>();
-        List<String> duplicateText = new ArrayList<>();
-        if (CollectionUtils.isNotEmpty(previousPageList)) {
-            for (Map<String, JSONObject> resultObj : previousPageList) {
-                JSONObject firstObj = resultObj.get(valueField);
-                if (MapUtils.isEmpty(firstObj)) {
-                    continue;
-                }
-                JSONObject secondObj = resultObj.get(textField);
-                if (MapUtils.isEmpty(secondObj)) {
-                    continue;
-                }
-                String value = firstObj.getString("value");
-                if (duplicateValue.contains(value)) {
-                    continue;
-                } else {
-                    duplicateValue.add(value);
-                }
-                String text = secondObj.getString("text");
-                if (!duplicateText.contains(text)) {
-                    duplicateText.add(text);
-                }
-            }
-        }
-        Iterator<Map<String, JSONObject>> iterator = resultList.iterator();
-        while (iterator.hasNext()) {
-            Map<String, JSONObject> resultObj = iterator.next();
-            JSONObject firstObj = resultObj.get(valueField);
-            if (MapUtils.isEmpty(firstObj)) {
-                iterator.remove();
-                continue;
-            }
-            JSONObject secondObj = resultObj.get(textField);
-            if (MapUtils.isEmpty(secondObj)) {
-                iterator.remove();
-                continue;
-            }
-            String value = firstObj.getString("value");
-            if (StringUtils.isBlank(value)) {
-                iterator.remove();
-                continue;
-            }
-            if (duplicateValue.contains(value)) {
-                iterator.remove();
-                continue;
-            } else {
-                duplicateValue.add(value);
-            }
-            String text = secondObj.getString("text");
-            if (StringUtils.isBlank(text)) {
-                iterator.remove();
-                continue;
-            }
-            if (duplicateText.contains(text)) {
-                iterator.remove();
-            } else {
-                duplicateText.add(text);
-            }
-        }
+        Boolean needPage = jsonObj.getBoolean("needPage");
+        Integer currentPage = jsonObj.getInteger("currentPage");
+        Integer pageSize = jsonObj.getInteger("pageSize");
+        JSONArray defaultValue = jsonObj.getJSONArray("defaultValue");
+        return matrixService.searchMatrixColumnDataForSelect(
+                matrixUuid,
+                keywordColumn,
+                valueField,
+                textField,
+                hiddenFieldList,
+                filterList,
+                keyword,
+                currentPage,
+                pageSize,
+                needPage,
+                defaultValue);
     }
 }
